<resources>
    <string name="app_name">MyBeats</string>
    <string name="meu_beats">Meu Beats</string>
    <string name="especializa">Especializados em fones para deejay</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="ainda_nao_e_cadastrado">Ainda não é cadastrado?</string>
    <string name="inscreva_se">Inscreva-se</string>
    <string name="adicionar">Adicionar</string>
    <string name="pergunta">\?</string>
    <string name="captacao">Captação</string>
    <string name="altura">altura</string>
    <string name="autonomia">Autonomia</string>
    <string name="alimentacao">Alimentação</string>
    <string name="compatibilidade">Compatibilidade</string>
    <string name="conexao">Conexão</string>
    <string name="descricao">Descrição</string>
    <string name="comprar">Comprar</string>
    <string name="search">Search</string>
    <string name="phone_model_02">Fone modelo 02</string>
    <string name="note_4_8">4.8</string>
    <string name="reviews_86">86 reviews</string>
    <string name="value_20_50">R$ 20,50</string>

    <string name="login_edit_text_error_invalid_email">E-mail inválido</string>
    <string name="login_edit_text_error_invalid_password">Senha inválida</string>
    <string name="user_password_invalid">Usuário e/ou senha inválidos</string>
    <string name="error">Error</string>
</resources>