<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <View
        android:id="@+id/detailsGradient"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/gradient_background"
        app:layout_constraintBottom_toBottomOf="@+id/detailsGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/detailsImage"
        android:layout_width="@dimen/extra_large_307_dp"
        android:layout_height="@dimen/extra_large_253_dp"
        android:layout_marginTop="@dimen/medium_62_dp"
        android:layout_marginBottom="@dimen/medium_62_dp"
        android:layout_marginStart="@dimen/small_34_dp"
        android:layout_marginEnd="@dimen/small_34_dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/detailsGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="@dimen/extra_large_248_dp"
        android:layout_height="@dimen/small_8_dp"
        android:layout_marginStart="@dimen/small_12_dp"
        android:layout_marginEnd="@dimen/small_11_dp"
        android:layout_marginTop="@dimen/extra_large_249_dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ellipse"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="@+id/detailsImage"
        app:layout_constraintStart_toStartOf="@+id/detailsImage"
        app:layout_constraintTop_toTopOf="@+id/detailsImage" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/detailsGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintGuide_percent="0.45" />

    <View
        android:id="@+id/detailsViewBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/detailsGuideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/detailsGuideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintGuide_percent="0.5" />

    <View
        android:id="@+id/detailsViewLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/small_27_dp"
        android:layout_marginEnd="@dimen/small_27_dp"
        android:background="#804B4B4B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TextViewDetailsBold"
        android:id="@+id/detailsConection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_32_dp"
        android:text="@string/conexao"
        app:layout_constraintEnd_toEndOf="@id/detailsGuideline2"
        app:layout_constraintTop_toTopOf="@+id/detailsViewLine" />

    <TextView
        style="@style/TextViewDetails"
        android:id="@+id/detailsConectionValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_32_dp"
        android:text="@string/conexao"
        app:layout_constraintStart_toStartOf="@+id/detailsGuideline2"
        app:layout_constraintTop_toTopOf="@+id/detailsViewLine" />

    <TextView
        style="@style/TextViewDetailsBold"
        android:id="@+id/detailsCompatibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compatibilidade"
        app:layout_constraintEnd_toEndOf="@id/detailsGuideline2"
        app:layout_constraintTop_toBottomOf="@+id/detailsConection" />

    <TextView
        style="@style/TextViewDetails"
        android:id="@+id/detailsCompatibilityValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compatibilidade"
        app:layout_constraintStart_toStartOf="@+id/detailsGuideline2"
        app:layout_constraintTop_toBottomOf="@+id/detailsConectionValue" />

    <TextView
        style="@style/TextViewDetailsBold"
        android:id="@+id/detailsCharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alimentacao"
        app:layout_constraintEnd_toEndOf="@id/detailsGuideline2"
        app:layout_constraintTop_toBottomOf="@+id/detailsCompatibility" />

    <TextView
        style="@style/TextViewDetails"
        android:id="@+id/detailsChargeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alimentacao"
        app:layout_constraintStart_toStartOf="@+id/detailsGuideline2"
        app:layout_constraintTop_toBottomOf="@+id/detailsCompatibilityValue" />

    <TextView
        style="@style/TextViewDetailsBold"
        android:id="@+id/detailsAutonomy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autonomia"
        app:layout_constraintEnd_toEndOf="@id/detailsGuideline2"
        app:layout_constraintTop_toBottomOf="@+id/detailsCharge" />

    <TextView
        style="@style/TextViewDetails"
        android:id="@+id/detailsAutonomyValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autonomia"
        app:layout_constraintStart_toStartOf="@+id/detailsGuideline2"
        app:layout_constraintTop_toBottomOf="@+id/detailsChargeValue" />

    <TextView
        style="@style/TextViewDetailsBold"
        android:id="@+id/detailsHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altura"
        app:layout_constraintEnd_toEndOf="@id/detailsGuideline2"
        app:layout_constraintTop_toBottomOf="@+id/detailsAutonomy" />

    <TextView
        style="@style/TextViewDetails"
        android:id="@+id/detailsHeightValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altura"
        app:layout_constraintStart_toStartOf="@+id/detailsGuideline2"
        app:layout_constraintTop_toBottomOf="@+id/detailsAutonomyValue" />

    <TextView
        style="@style/TextViewDetailsBold"
        android:id="@+id/detailsCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/captacao"
        app:layout_constraintEnd_toEndOf="@id/detailsGuideline2"
        app:layout_constraintTop_toBottomOf="@+id/detailsHeight" />

    <TextView
        style="@style/TextViewDetails"
        android:id="@+id/detailsCaptureValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/captacao"
        app:layout_constraintStart_toStartOf="@+id/detailsGuideline2"
        app:layout_constraintTop_toBottomOf="@+id/detailsHeightValue" />

    <Button
        style="@style/ButtonPrimary"
        android:id="@+id/detailsButtonEnter"
        android:layout_width="326dp"
        android:layout_height="50dp"
        android:text="@string/comprar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/detailsDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_32_dp"
        android:layout_marginStart="@dimen/large_77_dp"
        android:layout_marginEnd="@dimen/large_77_dp"
        android:text="@string/descricao"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/detailsViewLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>