<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@drawable/gradient_background"
        app:layout_constraintBottom_toBottomOf="@id/homeGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/homeImageView"
            android:layout_width="@dimen/extra_large_266_dp"
            android:layout_height="@dimen/extra_large_219_dp"
            android:layout_marginStart="@dimen/medium_55_dp"
            android:layout_marginTop="@dimen/medium_62_dp"
            android:layout_marginEnd="@dimen/medium_55_dp"
            android:layout_marginBottom="@dimen/small_24_dp"
            android:scaleType="centerCrop"
            android:src="@drawable/headphone"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toTopOf="@+id/homeButtonAdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="@dimen/extra_large_232_dp"
            android:layout_height="@dimen/small_8_dp"
            android:layout_marginStart="@dimen/small_18_dp"
            android:layout_marginEnd="@dimen/small_16_dp"
            android:layout_marginTop="@dimen/extra_large_209_dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ellipse"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="@+id/homeImageView"
            app:layout_constraintStart_toStartOf="@+id/homeImageView"
            app:layout_constraintTop_toTopOf="@+id/homeImageView" />

        <Button
            style="@style/ButtonPrimary"
            android:id="@+id/homeButtonAdd"
            android:layout_width="@dimen/large_163_dp"
            android:layout_height="@dimen/small_45_dp"
            android:layout_marginStart="@dimen/large_102_dp"
            android:layout_marginEnd="@dimen/large_110_dp"
            android:layout_marginBottom="@dimen/small_32_dp"
            android:text="@string/adicionar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            style="@style/ButtonPrimary"
            android:id="@+id/homeButtonQuestion"
            android:layout_width="@dimen/small_44_dp"
            android:layout_height="@dimen/small_45_dp"
            android:layout_marginStart="@dimen/small_11_dp"
            android:layout_marginBottom="@dimen/small_32_dp"
            android:text="@string/pergunta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/homeButtonAdd" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/homeGuideline"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.49" />

    <ViewFlipper
        android:id="@+id/homeViewFlipper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/homeGuideline">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/homeRecyclerHeadphones"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item" />

        <TextView
            android:id="@+id/homeTextViewError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </ViewFlipper>

</androidx.constraintlayout.widget.ConstraintLayout>